src/test/deca/context/valid/1000_complet.deca
// Description:
//    Programme minimaliste utilisant une affectation.
//
// Resultats:
// a.getX() = 1
//
// Historique:
//    cree le 01/01/2022

class A {
    protected int x;
    int getX(){
        return x;
    }

    void setX(int x){
        this.x = x;
    }
}
{
    A a =  new A();
    a.setX(1);
    println("a.getX() = ", a.getX());
}
